Add better install instructions to README.md