@@ -5,5 +5,9 @@ This repository contains all DiscordIntegration addons I made
 
 **Download** releases and translated configs [HERE](https://github.com/ErdbeerbaerLP/DiscordIntegration-Addon-Repository/tree/master/_Releases)
 
-
+INSTALLATION
+---
 Addons are installed to `SERVER/DiscordIntegration-Data/addons`
+
+#### NOTE: To use addons with Java 11 and higher, start your server with `java --add-opens java.base/java.io=ALL-UNNAMED -jar SERVER.jar`
+This is required for loading addons, else you will get errors while loading the addons (server and DCI will still start properly)
